CSS fix for product overflow

--- a/gocart/themes/default/assets/css/styles.css
+++ b/gocart/themes/default/assets/css/styles.css
@@ -102,10 +102,13 @@ img.responsiveImage
 	display:none;
 }
 
-.category_container .span3 {
+.category_container .span3{
+	overflow:hidden;
+}
+
+.category_container .span3 div{
 	padding-bottom:9999px;
 	margin-bottom:-9989px;
-	overflow:hidden;
 }
 
 .product-image {
